--- a/index.html
+++ b/index.html
@@ -21,27 +21,15 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># I am a programmer,</span><br/>
-			<span class="comments"># so I write code to celebrate Valentine's Day in coder's way.</span><br/>
-			<span class="comments">##</span><br/>
-			i = Boy(<span class="string">"Qingcai Cui"</span>);<br/>
-			u = Girl(<span class="string">"Qian Ma"</span>);<br/>
-			<span class="comments"># Oct 14, 2018, I meet you because of PyCon 2018. </span><br/>
+			<span class="comments"># I am Huashan PIG PIG Hhahahaha,</span><br/>
+			<span class="comments"># I just got home and was very touched to see the video you made.</span><br/>
+			<span class="comments"># So wanted to make such a website to express my love for you.</span><br/>
+			i = Boy(<span class="string">"HuaZHU"</span>);<br/>
+			u = Girl(<span class="string">"EmeiTU"</span>);<br/>
+			<span class="comments"># Oct 1, 2023, I'm with you. </span><br/>
 			i.meet(u)<br/>
-			<span class="comments"># Afterwards, I confessed to you. </span><br/>
-			i.confess(u)<br/>
-			<span class="comments"># Nov 5, 2018, You became my girlfriend.</span><br/>
-			u.accepted(i)<br/>
 			<span class="comments"># Since then, we spent harmony happiness life every day.</span><br/>
 			happy(u, i)<br/>
-			<span class="comments"># We enjoy studying together.</span><br/>
-			study(u, i)<br/>
-			<span class="comments"># We enjoy cuisine together.</span><br/>
-			dine(u, i)<br/>
-			<span class="comments"># We enjoy appointment together.</span><br/>
-			appoint(u, i)<br/>
-			<span class="comments"># We enjoy vacation together.</span><br/>
-			vacation(u, i)<br/>
 			<span class="comments"># Sometimes there are a few conflicts between us.</span><br/>
 			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
 			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
@@ -62,12 +50,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Qian, I have fallen in love with you for
+					CHEN, I have fallen in love with you for
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					Love u forever and ever.<br/>
-					<div class="signature">- Qingcai Cui | Germey</div>
+					<div class="signature">- Qian Chao | Germey</div>
 				</div>
 			</div>
 		</div>
