--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</div>
 	</div>
 	<div id="copyright">
-		Copyright © 2020 <a href='http://cuiqingcai.com'>cuiqingcai.com</a> 2014-2020
+		made in QC 2024/2/12
 	</div>
 </div>
 <script type="text/javascript">
